feat: 친구 상세보기 기능 추가